Bug 844744, part 2 - Make <input type=number> use ICU when available to support localized number input. r=smaug